--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-pandas==0.24.1
 scipy==1.3.0
 python-csv
 # Elasticsearch 6.x
@@ -8,10 +7,17 @@ pyyaml==5.3.1
 parse==1.15.0
 es-pandas==0.0.10
 progressbar2==3.50.1
-jupyter
+jupyter==1.0.0
 matplotlib==3.2.1
 seaborn==0.10.0
-scikit-learn>=0.18
 tqdm==4.45.0
 jupyterthemes==0.15.9
 tensorflow==2.1.0
+plotly
+shapely
+folium
+torchvision==0.5.0+cpu
+torch==1.4.0+cpu
+pandas==1.0.3
+pandas-profiling==2.6.0
+scikit-learn==0.22.1
