--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-scipy==1.3.0
+pandas==0.25.3
+scipy==1.4.1
 python-csv
 # Elasticsearch 6.x
 elasticsearch>=6.0.0
@@ -12,12 +13,10 @@ matplotlib==3.2.1
 seaborn==0.10.0
 tqdm==4.45.0
 jupyterthemes==0.15.9
-tensorflow==2.1.0
+tensorflow==2.2.0
 plotly
 shapely
 folium
-torchvision==0.5.0+cpu
-torch==1.4.0+cpu
-pandas==1.0.3
 pandas-profiling==2.6.0
 scikit-learn==0.22.1
+kaggle==1.5.6
